<resources>
    <string name="app_name">Taller Material Design</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="car_details">Imagen Detalle de Carro</string>
    <string name="title_details">Detalle de Carro</string>
    <string name="delete">Delete</string>
    <string name="title_add_car">Agregar Carro</string>
    <string name="btn_save">Guardar</string>

    <string name="select_model">Elija un Modelo</string>
    <string name="select_brand">Elija una Marca</string>
    <string name="select_color">Elija un Color</string>
    <string name="model_2000" translatable="false">2000</string>
    <string name="model_2005" translatable="false">2005</string>
    <string name="model_2010" translatable="false">2010</string>
    <string name="brand_bmw" translatable="false">BMW</string>
    <string name="brand_audi" translatable="false">Audi</string>
    <string name="brand_renault" translatable="false">Renault</string>
    <string name="blue">Azul</string>
    <string name="green">Verde</string>
    <string name="red">Red</string>
    <string name="input_licence_plate">Ingrese una Placa</string>
    <string name="input_price">Ingrese un Precio</string>
    <string name="car_added">Carro Agregado</string>
    <string name="validate_licence_plate">Ingrese una placa porfavor</string>
    <string name="validate_price">Ingrese un Precio Valido</string>
    <string name="validate_brand">Seleccione una Marca</string>
    <string name="validate_model">Seleccione un Modelo</string>
    <string name="validate_color">seleccione un color</string>

    <string-array name="models_cars">
        <item>@string/select_model</item>
        <item>@string/model_2000</item>
        <item>@string/model_2005</item>
        <item>@string/model_2010</item>
    </string-array>

    <string-array name="brands_cars">
        <item>@string/select_brand</item>
        <item>@string/brand_bmw</item>
        <item>@string/brand_renault</item>
        <item>@string/brand_audi</item>
    </string-array>

    <string-array name="colors_cars">
        <item>@string/select_color</item>
        <item>@string/green</item>
        <item>@string/red</item>
        <item>@string/blue</item>
    </string-array>
</resources>